View - добавлена возможность редактировать категории - добавлена возможность удалять категории Model - добавил EFCore.Plus к проекту - сделал фильтрации по IsActive - сделал ToString для Ef- / DTO - типов
Немного разобрался в Js благодаря Антону))

--- a/TIA.WebApp/TIA.WebApp.csproj
+++ b/TIA.WebApp/TIA.WebApp.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\TIA.BusinessLogic\TIA.BusinessLogic.csproj" />
     <ProjectReference Include="..\TIA.Core\TIA.Core.csproj" />
     <ProjectReference Include="..\TIA.EntityFramework\TIA.EntityFramework.csproj" />
+    <ProjectReference Include="..\TIA.Extentions\TIA.Extentions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
