View 8 - Заменил IEnumerable на List во всех вьюхах и контроллерах, связанных с DTO типами - Добавил Layout для Каталогов - Разделили метод Products на Products/TableData - Метод GetEmptyTable в контролере каталогов удалён - YesNoDialog теперь вызывается без подгрузки с сервера Model 4 - Заменил IEnumerable на List в DTO- / Ef- типах - В DS классах поправил код, убрав лишнее и изменил некоторые методы - Переписаны возвращаемые типы методов внутри модели. Теперь они асинхронно выполняются в другом потоке с возможностью вызывать другие асинхронные задачи. - Реализован запрет на удаление, пока есть данные у каталога

--- a/TIA.ConsoleTest/TIA.ConsoleTest.csproj
+++ b/TIA.ConsoleTest/TIA.ConsoleTest.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TIA.BusinessLogic\TIA.BusinessLogic.csproj" />
     <ProjectReference Include="..\TIA.EntityFramework\TIA.EntityFramework.csproj" />
   </ItemGroup>
 
